[gd_scene load_steps=12 format=2]

[ext_resource path="res://Themes/Anton-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/LineEditTheme.tres" type="Theme" id=2]
[ext_resource path="res://Themes/CancelButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://Themes/SubmitTheme.tres" type="Theme" id=4]
[ext_resource path="res://Api/Payments.gd" type="Script" id=5]
[ext_resource path="res://Api/WalletCoinRestApi.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.690196, 0.792157, 0.803922, 0.686275 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id=3]
Panel/styles/panel = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 38
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Payments" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 1 )
color = Color( 0.764706, 0.87451, 0.87451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Payment" type="Panel" parent="Background"]
margin_left = 326.0
margin_top = 82.0
margin_right = 760.0
margin_bottom = 506.0
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/Payment"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_top = 21.565
margin_right = 434.0
margin_bottom = 78.565
theme = SubResource( 5 )
text = "Pay In WalletCoin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="LineEdit" parent="Background/Payment"]
margin_left = 205.652
margin_top = 111.335
margin_right = 567.652
margin_bottom = 201.335
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
text = "0.000566779"
selecting_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Background/Payment/Amount"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
margin_left = -295.186
margin_top = 17.9336
margin_right = -11.1857
margin_bottom = 77.9336
text = "Pay WLLC Amount:"

[node name="AccessToken" type="LineEdit" parent="Background/Payment"]
margin_left = 52.0
margin_top = 176.234
margin_right = 721.0
margin_bottom = 266.234
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
placeholder_text = "Your Access Token"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="Background/Payment"]
modulate = Color( 0.254902, 0.254902, 0.254902, 1 )
margin_top = 243.424
margin_right = 868.0
margin_bottom = 300.424
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PayNow" type="Button" parent="Background/Payment"]
margin_left = 52.0
margin_top = 298.749
margin_right = 530.0
margin_bottom = 354.749
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 4 )
text = "Pay Now"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelPayment" type="Button" parent="Background/Payment"]
margin_left = 52.0
margin_top = 345.418
margin_right = 530.0
margin_bottom = 401.418
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 3 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalletCoinAPI" type="Node" parent="."]
script = ExtResource( 6 )
Transaction_NotificationLabel = "Background/Payment/Notification"
[connection signal="pressed" from="Background/Payment/PayNow" to="." method="_on_PayNow_pressed"]
[connection signal="pressed" from="Background/Payment/CancelPayment" to="." method="_on_CancelPayment_pressed"]
